[package]
name = "bpflan-ebpf"
version = "0.1.0"
edition = "2021"

[dependencies]
# bpflan-common = { path = "../bpflan-common" }

aya-ebpf = { workspace = true }
aya-log-ebpf = { workspace = true }

network-types = "0.0.7"

[build-dependencies]
which = { workspace = true }

[[bin]]
name = "bpflan"
path = "src/main.rs"
